# Selene

./: .clang-format  .clang-tidy  .gitignore  meson.build  meson_options.txt
include/: asm.h  compiler.h  lock.h  lock.hpp  log.h  log.hpp
include/common/: bitmap.h  bitmap.hpp
include/kernel/: kernel.h
include/kernel/api/: calls.h
include/kernel/arch/: arch.h  arch.hpp
include/kernel/arch/x86_64/: arch.h  arch.hpp  regs.h
include/kernel/arch/x86_64/cpu/: cpu.h  cpu.hpp  exceptions.h  exceptions.hpp  features.h  features.hpp  gdt.h  gdt.hpp  idt.h  idt.hpp
include/kernel/arch/x86_64/drivers/: uart.h  uart.hpp
include/kernel/memory/: memory.h  memory.hpp  physical.h  physical.hpp
include/klibc/: assert.h  ctype.h  stdio.h  stdlib.h  string.h
kernel/: kernel.c  main.c  main.cpp  meson.build
kernel/api/: calls.c  calls.cpp  meson.build
kernel/arch/x86_64/: arch.c  arch.cpp  meson.build
kernel/arch/x86_64/cpu/: cpu.c  cpu.cpp  exceptions.c  exceptions.cpp  features.c  features.cpp  gdt.S  gdt.c  gdt.cpp  idt.S  idt.c  idt.cpp  meson.build
kernel/arch/x86_64/drivers/: meson.build  uart.c  uart.cpp
kernel/arch/x86_64/drivers/internal/: uart.h
kernel/memory/: meson.build  physical.c  physical.cpp
klibc/: assert.c  ctype.c  meson.build
klibc/crt/: crti.c  crtn.c  meson.build
klibc/internal/: memcopy.c  memcopy.h  meson.build  stdio_impl.h
klibc/stdio/: __overflow.c  __stdio_write.c  __towrite.c  feof.c  ferror.c  fwrite.c  meson.build  printf.c  putc.c  stderr.c  stdin.c  stdout.c  vfprintf.c  vsnprintf.c
klibc/stdlib/: abort.c  abs.c  atou.c  div.c  meson.build  strtol.c  strtoll.c  strtoul.c  strtoull.c
klibc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  meson.build  strcat.c  strcmp.c  strcpy.c  strlen.c
meson/analysis/clang-tidy/: meson.build
meson/analysis/cppcheck/: meson.build
meson/compiler/: meson.build
meson/compiler/c/: meson.build
meson/compiler/check-and-apply-flags/: meson.build
meson/compiler/cpp/: meson.build
meson/cross/: clang-amd64.txt
meson/docs/doxygen/: Doxyfile.in  meson.build
meson/emulation/: meson.build
meson/format/: .clang-format  meson.build
meson/linker-scripts/: linker-amd64.ld
meson/linker/linker-map/: meson.build
meson/linker/linker-script-as-property/: meson.build
meson/objcopy/: meson.build
meson/package/: meson.build
meson/scripts/: limine.conf
meson/standard/: meson.build
misc/: lock.c  log.c  log.cpp  meson.build
subprojects/packagefiles/limine/: meson.build
subprojects/packagefiles/ovmf/: meson.build
